--- a/index.html
+++ b/index.html
@@ -11,31 +11,30 @@
 <body>
    <div class="container cyan darken-4">
         <div class="row">
-             <div class="col s12"><h1 class="center-align">960 Grid</h1></div>
-        </div>
-        <div class="row">
-             <div class="col s6"></div>
-             <div class="col s6"></div>
-        </div>
-        <div class="row">
-             <div class="col s3"></div>
-             <div class="col s12 m6 l3"></div>
-             <div class="col s12 m6 l3"></div>
-             <div class="col s12 m6 l3"></div>
-        </div>
-        <div class="row">
-             <div class="col s12 m6 l6"></div>
-             <div class="col s12 m6 l6">
-                 <div class="row">
-                    <div class="col s12 m6 l6"></div>
-                    <div class="col s12 m6 l6"></div>
-                 </div>
+            <div class="col s12">
+                <h1 class="center-align  grey-text text-lighten-5">960 Grid</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col s12 m2 l2"></div>
-            <div class="col s12 m10 l10"></div>            
+             <div class="col s6 level"></div>
+             <div class="col s6 level"></div>
         </div>
+        <div class="row">
+             <div class="col s3 level"></div>
+             <div class="col s3 level"></div>
+             <div class="col s3 level"></div>
+             <div class="col s3 level"></div>
+        </div>
+        <div class="row">
+             <div class="col s6 level"></div>
+             <div class="col s3 level"></div>
+             <div class="col s3 level"></div>
+        </div>
+        <div class="row">
+            <div class="col s2 level"></div>
+            <div class="col s10 level"></div>            
+        </div>
+
     </div>
 </body>
 </html>
